apps/coffee/coffee1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: coffee
spec:
    replicas: 2
    selector:
        matchLabels:
            app: coffee
    template:
        metadata:
            labels:
                app: coffee
        spec:
            containers:
                - name: coffee
                  image: nginxdemos/nginx-hello:plain-text
                  ports:
                      - containerPort: 8080
