apps/coffee/coffee2.yaml
apiVersion: v1
kind: Service
metadata:
    name: coffee
spec:
    ports:
        - port: 80
          targetPort: 8080
          protocol: TCP
          name: http
    selector:
        app: coffee
